// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ RepoHeader ]] renders RepoHeader for GSR: RepoHeader for GSR 1`] = `
"<div>
  <div class=\\"flex h-13 w-full items-center justify-between border-b border-slate-400 bg-ink-300 p-2 lg:py-3 lg:px-4\\">
    <div class=\\"flex items-center lg:gap-x-3\\">
      <zbutton-stub color=\\"vanilla-400\\" iconcolor=\\"\\" label=\\"\\" loadinglabel=\\"\\" as=\\"button\\" justify=\\"center\\" buttontype=\\"ghost\\" type=\\"button\\" size=\\"small\\" to=\\"\\" icon=\\"sidebar-toggle\\" id=\\"mobile-menu-toggle\\" class=\\"lg:hidden\\"></zbutton-stub>
      <h2 class=\\"flex items-center gap-x-2 text-base font-medium text-vanilla-400\\"><span class=\\"hidden rounded-lg bg-ink-200 p-1 pb-0.5 lg:inline-block\\"><zicon-stub icon=\\"globe\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-100\\" class=\\"mb-0.5\\"></zicon-stub></span> <span class=\\"line-clamp-1\\"><a>deepsourcelabs</a> <span>/</span> <span class=\\"text-vanilla-100\\">
            bifrost
          </span></span></h2>
      <div class=\\"hidden items-center gap-x-2 lg:flex\\"><button class=\\"rounded-sm p-1 hover:bg-ink-200 has-tooltip\\" data-original-title=\\"null\\">
          <zicon-stub icon=\\"star-outline\\" size=\\"small\\" position=\\"\\" color=\\"slate\\" class=\\"opacity-40 hover:opacity-70\\"></zicon-stub>
        </button>
        <div class=\\"flex items-center gap-x-3\\"><a target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"flex items-center\\">
            <ztag-stub state=\\"default\\" iconleft=\\"gsr-colored\\" size=\\"small\\" bgcolor=\\"ink-300\\" textsize=\\"sm\\" spacing=\\"p-3px\\" iconcolor=\\"current\\" class=\\"border border-slate-400 has-tooltip\\" data-original-title=\\"null\\"></ztag-stub>
          </a>
          <zlabel-stub state=\\"warning\\" size=\\"base\\" class=\\"p-3px inline-block select-none\\">
            Inactive
          </zlabel-stub>
        </div>
      </div>
    </div>
    <div class=\\"flex items-center gap-x-5 lg:hidden\\"><button class=\\"rounded-sm p-0.5 hover:bg-ink-200\\">
        <zicon-stub icon=\\"star-outline\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub>
      </button> <button class=\\"rounded-sm p-0.5 hover:bg-ink-200\\">
        <zicon-stub icon=\\"info-circle\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub>
      </button></div>
  </div>
  <div class=\\"hide-scroll h-nav-items-container space-x-5 overflow-x-auto border-b border-slate-400 bg-ink-400 px-3 pt-3\\"><a>
      <ztab-stub isactive=\\"true\\" icon=\\"gauge\\" borderactivecolor=\\"juniper\\">Overview</ztab-stub>
    </a><a>
      <ztab-stub icon=\\"flag\\" borderactivecolor=\\"juniper\\">Issues</ztab-stub>
    </a><a>
      <ztab-stub icon=\\"autofix\\" borderactivecolor=\\"juniper\\">Autofix</ztab-stub>
    </a><a>
      <ztab-stub icon=\\"bar-chart\\" borderactivecolor=\\"juniper\\">Metrics</ztab-stub>
    </a><a>
      <ztab-stub icon=\\"pie-chart\\" borderactivecolor=\\"juniper\\">Reports</ztab-stub>
    </a><a>
      <ztab-stub icon=\\"history\\" borderactivecolor=\\"juniper\\">History</ztab-stub>
    </a><a>
      <ztab-stub icon=\\"wrench\\" borderactivecolor=\\"juniper\\">Settings</ztab-stub>
    </a></div>
</div>"
`;

exports[`[[ RepoHeader ]] renders RepoHeader logged out: Default Repo Header Snap Logged Out 1`] = `
"<div>
  <div class=\\"flex h-13 w-full items-center justify-between border-b border-slate-400 bg-ink-300 p-2 lg:py-3 lg:px-4\\">
    <div class=\\"flex items-center lg:gap-x-3\\">
      <zbutton-stub color=\\"vanilla-400\\" iconcolor=\\"\\" label=\\"\\" loadinglabel=\\"\\" as=\\"button\\" justify=\\"center\\" buttontype=\\"ghost\\" type=\\"button\\" size=\\"small\\" to=\\"\\" icon=\\"sidebar-toggle\\" id=\\"mobile-menu-toggle\\" class=\\"lg:hidden\\"></zbutton-stub>
      <h2 class=\\"flex items-center gap-x-2 text-base font-medium text-vanilla-400\\"><span class=\\"hidden rounded-lg bg-ink-200 p-1 pb-0.5 lg:inline-block\\"><zicon-stub icon=\\"globe\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-100\\" class=\\"mb-0.5\\"></zicon-stub></span> <span class=\\"line-clamp-1\\"><a>deepsourcelabs</a> <span>/</span> <span class=\\"text-vanilla-100\\">
            bifrost
          </span></span></h2>
      <div class=\\"hidden items-center gap-x-2 lg:flex\\">
        <!---->
        <div class=\\"flex items-center gap-x-3\\"><a target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"flex items-center\\">
            <ztag-stub state=\\"default\\" iconleft=\\"github\\" size=\\"small\\" bgcolor=\\"ink-300\\" textsize=\\"sm\\" spacing=\\"p-3px\\" iconcolor=\\"current\\" class=\\"border border-slate-400 has-tooltip\\" data-original-title=\\"null\\"></ztag-stub>
          </a>
          <zlabel-stub state=\\"success\\" size=\\"base\\" class=\\"p-3px inline-block select-none\\">
            Active
          </zlabel-stub>
        </div>
      </div>
    </div>
    <div class=\\"flex items-center gap-x-5 lg:hidden\\">
      <!---->
      <!---->
    </div>
  </div>
  <div class=\\"hide-scroll h-nav-items-container space-x-5 overflow-x-auto border-b border-slate-400 bg-ink-400 px-3 pt-3\\"><a>
      <ztab-stub isactive=\\"true\\" icon=\\"gauge\\" borderactivecolor=\\"juniper\\">Overview</ztab-stub>
    </a><a>
      <ztab-stub icon=\\"flag\\" borderactivecolor=\\"juniper\\">Issues</ztab-stub>
    </a>
    <!----><a>
      <ztab-stub icon=\\"bar-chart\\" borderactivecolor=\\"juniper\\">Metrics</ztab-stub>
    </a>
    <!----><a>
      <ztab-stub icon=\\"history\\" borderactivecolor=\\"juniper\\">History</ztab-stub>
    </a>
    <!---->
  </div>
</div>"
`;

exports[`[[ RepoHeader ]] renders RepoHeader with all permission: Default Repo Header Snap 1`] = `
"<div>
  <div class=\\"flex h-13 w-full items-center justify-between border-b border-slate-400 bg-ink-300 p-2 lg:py-3 lg:px-4\\">
    <div class=\\"flex items-center lg:gap-x-3\\">
      <zbutton-stub color=\\"vanilla-400\\" iconcolor=\\"\\" label=\\"\\" loadinglabel=\\"\\" as=\\"button\\" justify=\\"center\\" buttontype=\\"ghost\\" type=\\"button\\" size=\\"small\\" to=\\"\\" icon=\\"sidebar-toggle\\" id=\\"mobile-menu-toggle\\" class=\\"lg:hidden\\"></zbutton-stub>
      <h2 class=\\"flex items-center gap-x-2 text-base font-medium text-vanilla-400\\"><span class=\\"hidden rounded-lg bg-ink-200 p-1 pb-0.5 lg:inline-block\\"><zicon-stub icon=\\"globe\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-100\\" class=\\"mb-0.5\\"></zicon-stub></span> <span class=\\"line-clamp-1\\"><a>deepsourcelabs</a> <span>/</span> <span class=\\"text-vanilla-100\\">
            bifrost
          </span></span></h2>
      <div class=\\"hidden items-center gap-x-2 lg:flex\\"><button class=\\"rounded-sm p-1 hover:bg-ink-200 has-tooltip\\" data-original-title=\\"null\\">
          <zicon-stub icon=\\"star-outline\\" size=\\"small\\" position=\\"\\" color=\\"slate\\" class=\\"opacity-40 hover:opacity-70\\"></zicon-stub>
        </button>
        <div class=\\"flex items-center gap-x-3\\"><a target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"flex items-center\\">
            <ztag-stub state=\\"default\\" iconleft=\\"github\\" size=\\"small\\" bgcolor=\\"ink-300\\" textsize=\\"sm\\" spacing=\\"p-3px\\" iconcolor=\\"current\\" class=\\"border border-slate-400 has-tooltip\\" data-original-title=\\"null\\"></ztag-stub>
          </a>
          <zlabel-stub state=\\"success\\" size=\\"base\\" class=\\"p-3px inline-block select-none\\">
            Active
          </zlabel-stub>
        </div>
      </div>
    </div>
    <div class=\\"flex items-center gap-x-5 lg:hidden\\"><button class=\\"rounded-sm p-0.5 hover:bg-ink-200\\">
        <zicon-stub icon=\\"star-outline\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub>
      </button> <button class=\\"rounded-sm p-0.5 hover:bg-ink-200\\">
        <zicon-stub icon=\\"info-circle\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub>
      </button></div>
  </div>
  <div class=\\"hide-scroll h-nav-items-container space-x-5 overflow-x-auto border-b border-slate-400 bg-ink-400 px-3 pt-3\\"><a>
      <ztab-stub isactive=\\"true\\" icon=\\"gauge\\" borderactivecolor=\\"juniper\\">Overview</ztab-stub>
    </a><a>
      <ztab-stub icon=\\"flag\\" borderactivecolor=\\"juniper\\">Issues</ztab-stub>
    </a><a>
      <ztab-stub icon=\\"autofix\\" borderactivecolor=\\"juniper\\">Autofix</ztab-stub>
    </a><a>
      <ztab-stub icon=\\"bar-chart\\" borderactivecolor=\\"juniper\\">Metrics</ztab-stub>
    </a><a>
      <ztab-stub icon=\\"pie-chart\\" borderactivecolor=\\"juniper\\">Reports</ztab-stub>
    </a><a>
      <ztab-stub icon=\\"history\\" borderactivecolor=\\"juniper\\">History</ztab-stub>
    </a><a>
      <ztab-stub icon=\\"wrench\\" borderactivecolor=\\"juniper\\">Settings</ztab-stub>
    </a></div>
</div>"
`;

exports[`[[ RepoHeader ]] renders RepoHeader without a matching activeLink: RepoHeader without a matching activeLink Snap 1`] = `
"<div>
  <div class=\\"flex h-13 w-full items-center justify-between border-b border-slate-400 bg-ink-300 p-2 lg:py-3 lg:px-4\\">
    <div class=\\"flex items-center lg:gap-x-3\\">
      <zbutton-stub color=\\"vanilla-400\\" iconcolor=\\"\\" label=\\"\\" loadinglabel=\\"\\" as=\\"button\\" justify=\\"center\\" buttontype=\\"ghost\\" type=\\"button\\" size=\\"small\\" to=\\"\\" icon=\\"sidebar-toggle\\" id=\\"mobile-menu-toggle\\" class=\\"lg:hidden\\"></zbutton-stub>
      <h2 class=\\"flex items-center gap-x-2 text-base font-medium text-vanilla-400\\"><span class=\\"hidden rounded-lg bg-ink-200 p-1 pb-0.5 lg:inline-block\\"><zicon-stub icon=\\"globe\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-100\\" class=\\"mb-0.5\\"></zicon-stub></span> <span class=\\"line-clamp-1\\"><a>deepsourcelabs</a> <span>/</span> <span class=\\"text-vanilla-100\\">
            bifrost
          </span></span></h2>
      <div class=\\"hidden items-center gap-x-2 lg:flex\\"><button class=\\"rounded-sm p-1 hover:bg-ink-200 has-tooltip\\" data-original-title=\\"null\\">
          <zicon-stub icon=\\"star-outline\\" size=\\"small\\" position=\\"\\" color=\\"slate\\" class=\\"opacity-40 hover:opacity-70\\"></zicon-stub>
        </button>
        <div class=\\"flex items-center gap-x-3\\"><a target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"flex items-center\\">
            <ztag-stub state=\\"default\\" iconleft=\\"gsr-colored\\" size=\\"small\\" bgcolor=\\"ink-300\\" textsize=\\"sm\\" spacing=\\"p-3px\\" iconcolor=\\"current\\" class=\\"border border-slate-400 has-tooltip\\" data-original-title=\\"null\\"></ztag-stub>
          </a>
          <zlabel-stub state=\\"warning\\" size=\\"base\\" class=\\"p-3px inline-block select-none\\">
            Inactive
          </zlabel-stub>
        </div>
      </div>
    </div>
    <div class=\\"flex items-center gap-x-5 lg:hidden\\"><button class=\\"rounded-sm p-0.5 hover:bg-ink-200\\">
        <zicon-stub icon=\\"star-outline\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub>
      </button> <button class=\\"rounded-sm p-0.5 hover:bg-ink-200\\">
        <zicon-stub icon=\\"info-circle\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub>
      </button></div>
  </div>
  <div class=\\"hide-scroll h-nav-items-container space-x-5 overflow-x-auto border-b border-slate-400 bg-ink-400 px-3 pt-3\\"><a>
      <ztab-stub icon=\\"gauge\\" borderactivecolor=\\"juniper\\">Overview</ztab-stub>
    </a><a>
      <ztab-stub icon=\\"flag\\" borderactivecolor=\\"juniper\\">Issues</ztab-stub>
    </a><a>
      <ztab-stub icon=\\"autofix\\" borderactivecolor=\\"juniper\\">Autofix</ztab-stub>
    </a><a>
      <ztab-stub icon=\\"bar-chart\\" borderactivecolor=\\"juniper\\">Metrics</ztab-stub>
    </a><a>
      <ztab-stub icon=\\"pie-chart\\" borderactivecolor=\\"juniper\\">Reports</ztab-stub>
    </a><a>
      <ztab-stub icon=\\"history\\" borderactivecolor=\\"juniper\\">History</ztab-stub>
    </a><a>
      <ztab-stub icon=\\"wrench\\" borderactivecolor=\\"juniper\\">Settings</ztab-stub>
    </a></div>
</div>"
`;

exports[`[[ RepoHeader ]] renders RepoHeader without perms: Repo Header withut perms 1`] = `
"<div>
  <div class=\\"flex h-13 w-full items-center justify-between border-b border-slate-400 bg-ink-300 p-2 lg:py-3 lg:px-4\\">
    <div class=\\"flex items-center lg:gap-x-3\\">
      <zbutton-stub color=\\"vanilla-400\\" iconcolor=\\"\\" label=\\"\\" loadinglabel=\\"\\" as=\\"button\\" justify=\\"center\\" buttontype=\\"ghost\\" type=\\"button\\" size=\\"small\\" to=\\"\\" icon=\\"sidebar-toggle\\" id=\\"mobile-menu-toggle\\" class=\\"lg:hidden\\"></zbutton-stub>
      <h2 class=\\"flex items-center gap-x-2 text-base font-medium text-vanilla-400\\"><span class=\\"hidden rounded-lg bg-ink-200 p-1 pb-0.5 lg:inline-block\\"><zicon-stub icon=\\"globe\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-100\\" class=\\"mb-0.5\\"></zicon-stub></span> <span class=\\"line-clamp-1\\"><span class=\\"text-vanilla-400\\">deepsourcelabs</span> <span>/</span> <span class=\\"text-vanilla-100\\">
            bifrost
          </span></span></h2>
      <div class=\\"hidden items-center gap-x-2 lg:flex\\"><button class=\\"rounded-sm p-1 hover:bg-ink-200 has-tooltip\\" data-original-title=\\"null\\">
          <zicon-stub icon=\\"star-outline\\" size=\\"small\\" position=\\"\\" color=\\"slate\\" class=\\"opacity-40 hover:opacity-70\\"></zicon-stub>
        </button>
        <div class=\\"flex items-center gap-x-3\\"><a target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"flex items-center\\">
            <ztag-stub state=\\"default\\" iconleft=\\"github\\" size=\\"small\\" bgcolor=\\"ink-300\\" textsize=\\"sm\\" spacing=\\"p-3px\\" iconcolor=\\"current\\" class=\\"border border-slate-400 has-tooltip\\" data-original-title=\\"null\\"></ztag-stub>
          </a>
          <zlabel-stub state=\\"success\\" size=\\"base\\" class=\\"p-3px inline-block select-none\\">
            Active
          </zlabel-stub>
        </div>
      </div>
    </div>
    <div class=\\"flex items-center gap-x-5 lg:hidden\\"><button class=\\"rounded-sm p-0.5 hover:bg-ink-200\\">
        <zicon-stub icon=\\"star-outline\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub>
      </button> <button class=\\"rounded-sm p-0.5 hover:bg-ink-200\\">
        <zicon-stub icon=\\"info-circle\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub>
      </button></div>
  </div>
  <div class=\\"hide-scroll h-nav-items-container space-x-5 overflow-x-auto border-b border-slate-400 bg-ink-400 px-3 pt-3\\"><a>
      <ztab-stub isactive=\\"true\\" icon=\\"gauge\\" borderactivecolor=\\"juniper\\">Overview</ztab-stub>
    </a><a>
      <ztab-stub icon=\\"flag\\" borderactivecolor=\\"juniper\\">Issues</ztab-stub>
    </a><a>
      <ztab-stub icon=\\"autofix\\" borderactivecolor=\\"juniper\\">Autofix</ztab-stub>
    </a><a>
      <ztab-stub icon=\\"bar-chart\\" borderactivecolor=\\"juniper\\">Metrics</ztab-stub>
    </a><a>
      <ztab-stub icon=\\"pie-chart\\" borderactivecolor=\\"juniper\\">Reports</ztab-stub>
    </a><a>
      <ztab-stub icon=\\"history\\" borderactivecolor=\\"juniper\\">History</ztab-stub>
    </a><a>
      <ztab-stub icon=\\"wrench\\" borderactivecolor=\\"juniper\\">Settings</ztab-stub>
    </a></div>
</div>"
`;
